strategy legs correction